parser/TigerParser.java
// Generated from Tiger.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TigerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, VAR=3, MAIN=4, SEMI=5, COMMA=6, EQUALS=7, OF=8, ARRAY=9, 
		RECORD=10, END=11, LBRACKET=12, RBRACKET=13, COLON=14, ASSIGN=15, FUNCTION=16, 
		LPARENS=17, RPARENS=18, BEGIN=19, IF=20, ENDIF=21, THEN=22, ELSE=23, WHILE=24, 
		DO=25, ENDDO=26, FOR=27, TO=28, BREAK=29, RETURN=30, LET=31, IN=32, DOT=33, 
		POWER=34, PLUS=35, MINUS=36, MULT=37, DIV=38, NEQ=39, LESS=40, GREATER=41, 
		LTEQ=42, GTEQ=43, AND=44, OR=45, TYPE=46, INT_KW=47, FLOAT_KW=48, ID=49, 
		INT=50, FLOAT=51;
	public static final int
		RULE_tiger_program = 0, RULE_declaration_segment = 1, RULE_type_declaration_list = 2, 
		RULE_var_declaration_list = 3, RULE_funct_declaration_list = 4, RULE_type_declaration = 5, 
		RULE_type = 6, RULE_type_id = 7, RULE_field_list = 8, RULE_var_declaration = 9, 
		RULE_id_list = 10, RULE_id_list_tail = 11, RULE_optional_init = 12, RULE_funct_declaration = 13, 
		RULE_param_list = 14, RULE_param_list_tail = 15, RULE_ret_type = 16, RULE_param = 17, 
		RULE_stat_seq = 18, RULE_stat_seq_tail = 19, RULE_stat = 20, RULE_stat_tail_a = 21, 
		RULE_stat_tail_b = 22, RULE_assign_or_func = 23, RULE_aof_tail = 24, RULE_constant = 25, 
		RULE_sign = 26, RULE_constant_tail = 27, RULE_expr = 28, RULE_logic_expr = 29, 
		RULE_cond_expr = 30, RULE_term = 31, RULE_factor = 32, RULE_factor_tail = 33, 
		RULE_atom = 34, RULE_atom_tail = 35, RULE_expr_list = 36, RULE_expr_list_tail = 37;
	public static final String[] ruleNames = {
		"tiger_program", "declaration_segment", "type_declaration_list", "var_declaration_list", 
		"funct_declaration_list", "type_declaration", "type", "type_id", "field_list", 
		"var_declaration", "id_list", "id_list_tail", "optional_init", "funct_declaration", 
		"param_list", "param_list_tail", "ret_type", "param", "stat_seq", "stat_seq_tail", 
		"stat", "stat_tail_a", "stat_tail_b", "assign_or_func", "aof_tail", "constant", 
		"sign", "constant_tail", "expr", "logic_expr", "cond_expr", "term", "factor", 
		"factor_tail", "atom", "atom_tail", "expr_list", "expr_list_tail"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'var'", "'main'", "';'", "','", "'='", "'of'", "'array'", 
		"'record'", "'end'", "'['", "']'", "':'", "':='", "'function'", "'('", 
		"')'", "'begin'", "'if'", "'endif'", "'then'", "'else'", "'while'", "'do'", 
		"'enddo'", "'for'", "'to'", "'break'", "'return'", "'let'", "'in'", "'.'", 
		"'**'", "'+'", "'-'", "'*'", "'/'", "'<>'", "'<'", "'>'", "'<='", "'>='", 
		"'&'", "'|'", "'type'", "'int'", "'float'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "COMMENT", "VAR", "MAIN", "SEMI", "COMMA", "EQUALS", "OF", 
		"ARRAY", "RECORD", "END", "LBRACKET", "RBRACKET", "COLON", "ASSIGN", "FUNCTION", 
		"LPARENS", "RPARENS", "BEGIN", "IF", "ENDIF", "THEN", "ELSE", "WHILE", 
		"DO", "ENDDO", "FOR", "TO", "BREAK", "RETURN", "LET", "IN", "DOT", "POWER", 
		"PLUS", "MINUS", "MULT", "DIV", "NEQ", "LESS", "GREATER", "LTEQ", "GTEQ", 
		"AND", "OR", "TYPE", "INT_KW", "FLOAT_KW", "ID", "INT", "FLOAT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tiger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Tiger_programContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(TigerParser.MAIN, 0); }
		public TerminalNode LET() { return getToken(TigerParser.LET, 0); }
		public Declaration_segmentContext declaration_segment() {
			return getRuleContext(Declaration_segmentContext.class,0);
		}
		public TerminalNode IN() { return getToken(TigerParser.IN, 0); }
		public TerminalNode BEGIN() { return getToken(TigerParser.BEGIN, 0); }
		public Stat_seqContext stat_seq() {
			return getRuleContext(Stat_seqContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerParser.END, 0); }
		public TerminalNode EOF() { return getToken(TigerParser.EOF, 0); }
		public Tiger_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tiger_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTiger_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTiger_program(this);
		}
	}

	public final Tiger_programContext tiger_program() throws RecognitionException {
		Tiger_programContext _localctx = new Tiger_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tiger_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(MAIN);
			setState(77);
			match(LET);
			setState(78);
			declaration_segment();
			setState(79);
			match(IN);
			setState(80);
			match(BEGIN);
			setState(81);
			stat_seq();
			setState(82);
			match(END);
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_segmentContext extends ParserRuleContext {
		public Type_declaration_listContext type_declaration_list() {
			return getRuleContext(Type_declaration_listContext.class,0);
		}
		public Var_declaration_listContext var_declaration_list() {
			return getRuleContext(Var_declaration_listContext.class,0);
		}
		public Funct_declaration_listContext funct_declaration_list() {
			return getRuleContext(Funct_declaration_listContext.class,0);
		}
		public Declaration_segmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterDeclaration_segment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitDeclaration_segment(this);
		}
	}

	public final Declaration_segmentContext declaration_segment() throws RecognitionException {
		Declaration_segmentContext _localctx = new Declaration_segmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration_segment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			type_declaration_list();
			setState(86);
			var_declaration_list();
			setState(87);
			funct_declaration_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_declaration_listContext extends ParserRuleContext {
		public Type_declarationContext type_declaration() {
			return getRuleContext(Type_declarationContext.class,0);
		}
		public Type_declaration_listContext type_declaration_list() {
			return getRuleContext(Type_declaration_listContext.class,0);
		}
		public Type_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterType_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitType_declaration_list(this);
		}
	}

	public final Type_declaration_listContext type_declaration_list() throws RecognitionException {
		Type_declaration_listContext _localctx = new Type_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type_declaration_list);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				type_declaration();
				setState(90);
				type_declaration_list();
				}
				break;
			case VAR:
			case FUNCTION:
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declaration_listContext extends ParserRuleContext {
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public Var_declaration_listContext var_declaration_list() {
			return getRuleContext(Var_declaration_listContext.class,0);
		}
		public Var_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterVar_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitVar_declaration_list(this);
		}
	}

	public final Var_declaration_listContext var_declaration_list() throws RecognitionException {
		Var_declaration_listContext _localctx = new Var_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declaration_list);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				var_declaration();
				setState(96);
				var_declaration_list();
				}
				break;
			case FUNCTION:
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Funct_declaration_listContext extends ParserRuleContext {
		public Funct_declarationContext funct_declaration() {
			return getRuleContext(Funct_declarationContext.class,0);
		}
		public Funct_declaration_listContext funct_declaration_list() {
			return getRuleContext(Funct_declaration_listContext.class,0);
		}
		public Funct_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funct_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFunct_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFunct_declaration_list(this);
		}
	}

	public final Funct_declaration_listContext funct_declaration_list() throws RecognitionException {
		Funct_declaration_listContext _localctx = new Funct_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funct_declaration_list);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				funct_declaration();
				setState(102);
				funct_declaration_list();
				}
				break;
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_declarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(TigerParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(TigerParser.EQUALS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public Type_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterType_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitType_declaration(this);
		}
	}

	public final Type_declarationContext type_declaration() throws RecognitionException {
		Type_declarationContext _localctx = new Type_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(TYPE);
			setState(108);
			match(ID);
			setState(109);
			match(EQUALS);
			setState(110);
			type();
			setState(111);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type_idContext type_id() {
			return getRuleContext(Type_idContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(TigerParser.ARRAY, 0); }
		public TerminalNode LBRACKET() { return getToken(TigerParser.LBRACKET, 0); }
		public TerminalNode INT() { return getToken(TigerParser.INT, 0); }
		public TerminalNode RBRACKET() { return getToken(TigerParser.RBRACKET, 0); }
		public TerminalNode OF() { return getToken(TigerParser.OF, 0); }
		public TerminalNode RECORD() { return getToken(TigerParser.RECORD, 0); }
		public Field_listContext field_list() {
			return getRuleContext(Field_listContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerParser.END, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_KW:
			case FLOAT_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				type_id();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(ARRAY);
				setState(115);
				match(LBRACKET);
				setState(116);
				match(INT);
				setState(117);
				match(RBRACKET);
				setState(118);
				match(OF);
				setState(119);
				type_id();
				}
				break;
			case RECORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				match(RECORD);
				setState(121);
				field_list();
				setState(122);
				match(END);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_idContext extends ParserRuleContext {
		public TerminalNode INT_KW() { return getToken(TigerParser.INT_KW, 0); }
		public TerminalNode FLOAT_KW() { return getToken(TigerParser.FLOAT_KW, 0); }
		public Type_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterType_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitType_id(this);
		}
	}

	public final Type_idContext type_id() throws RecognitionException {
		Type_idContext _localctx = new Type_idContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==INT_KW || _la==FLOAT_KW) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_listContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode COLON() { return getToken(TigerParser.COLON, 0); }
		public Type_idContext type_id() {
			return getRuleContext(Type_idContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public Field_listContext field_list() {
			return getRuleContext(Field_listContext.class,0);
		}
		public Field_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterField_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitField_list(this);
		}
	}

	public final Field_listContext field_list() throws RecognitionException {
		Field_listContext _localctx = new Field_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_field_list);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(ID);
				setState(130);
				match(COLON);
				setState(131);
				type_id();
				setState(132);
				match(SEMI);
				setState(133);
				field_list();
				}
				break;
			case END:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(TigerParser.VAR, 0); }
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(TigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Optional_initContext optional_init() {
			return getRuleContext(Optional_initContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitVar_declaration(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_var_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(VAR);
			setState(139);
			id_list();
			setState(140);
			match(COLON);
			setState(141);
			type();
			setState(142);
			optional_init();
			setState(143);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_listContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public Id_list_tailContext id_list_tail() {
			return getRuleContext(Id_list_tailContext.class,0);
		}
		public Id_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterId_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitId_list(this);
		}
	}

	public final Id_listContext id_list() throws RecognitionException {
		Id_listContext _localctx = new Id_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_id_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(ID);
			setState(146);
			id_list_tail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_list_tailContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(TigerParser.COMMA, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public Id_list_tailContext id_list_tail() {
			return getRuleContext(Id_list_tailContext.class,0);
		}
		public Id_list_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_list_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterId_list_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitId_list_tail(this);
		}
	}

	public final Id_list_tailContext id_list_tail() throws RecognitionException {
		Id_list_tailContext _localctx = new Id_list_tailContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_id_list_tail);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(COMMA);
				setState(149);
				match(ID);
				setState(150);
				id_list_tail();
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Optional_initContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(TigerParser.ASSIGN, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Optional_initContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterOptional_init(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitOptional_init(this);
		}
	}

	public final Optional_initContext optional_init() throws RecognitionException {
		Optional_initContext _localctx = new Optional_initContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_optional_init);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGN:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				match(ASSIGN);
				setState(155);
				constant();
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Funct_declarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(TigerParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode LPARENS() { return getToken(TigerParser.LPARENS, 0); }
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public TerminalNode RPARENS() { return getToken(TigerParser.RPARENS, 0); }
		public Ret_typeContext ret_type() {
			return getRuleContext(Ret_typeContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(TigerParser.BEGIN, 0); }
		public Stat_seqContext stat_seq() {
			return getRuleContext(Stat_seqContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerParser.END, 0); }
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public Funct_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funct_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFunct_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFunct_declaration(this);
		}
	}
